# minecraft-server-automation

./: .ansible-lint.yml  .gitignore  .pre-commit-config.yaml  .yamllint.yml  Makefile  README.md  ansible.cfg  inventory.example.yml  pyproject.toml  requirements.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
playbooks/: minecraft.yml  nuke.yml  pull-data.yml  restart.yml  stop.yml
playbooks/group_vars/: all.yml
playbooks/templates/: docker-compose.yml.j2
templates/: docker-compose.yml.j2
