[project]
name = "minecraft-server-automation"
version = "0.1.0"
description = "Ansible automation for a Docker-based itzg Minecraft server."
requires-python = ">=3.11"
dependencies = [
  "ansible-core>=2.17.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ansible-lint>=26.4.0",
    "pre-commit>=4.3.0",
    "yamllint>=1.38.0",
]
